# vibe-leading

./: .env.example  README.md  drizzle.config.ts  package-lock.json  package.json
agent/: .env.example  README.md  pyproject.toml
agent/src/agent/: crew.py  main.py  server.py
agent/src/agent/db/: __init__.py  agents.py
app/: layout.tsx  page.tsx
app/api/copilotkit/: route.ts
app/api/copilotkit/[tpe]/[id]/: db-agent-runner.ts  route.ts
app/api/db/: route.ts
app/api/msg/chats/: route.ts
app/api/msg/chats/[chatId]/: route.ts
app/api/msg/list/: route.ts
app/api/org/agents/: route.ts
app/api/org/agents/[id]/: route.ts
app/api/tasks/crews/: route.ts
app/api/tasks/crews/[id]/: route.ts
app/chat/: layout.tsx  page.tsx
app/components/: BottomNav.tsx
app/config/: nav.ts
app/me/: page.tsx
app/messages/: page.tsx
app/msg/: page.tsx
app/msg/[tpe]/[agentId]/: ChatSidebar.tsx  layout.tsx  page.tsx
app/msg/[tpe]/[agentId]/[chatId]/: page.tsx
app/msg/[tpe]/[id]/: page.tsx
app/msg/[tpe]/[robotId]/: ChatSidebar.tsx  layout.tsx  page.tsx
app/msg/agent/[robotId]/: page.tsx
app/msg/chat/: ChatLayout.tsx  ChatSidebar.tsx
app/msg/chat/[chatId]/: page.tsx
app/org/: page.tsx
app/tasks/: page.tsx
app/tasks/crews/new/: page.tsx
docs/: NAVIGATION.md
lib/db/: index.ts
lib/db/migrations/: 0000_fair_the_phantom.sql  0001_aromatic_korg.sql  0002_condemned_puma.sql  0003_military_surge.sql
lib/db/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
lib/db/schema/: index.ts
(+2 files in other folders)
