[project]
name = "agent"
version = "0.1.0"
description = "vibe-leading agent using crewAI"
authors = [
    { name = "HE Fan", email = "Tomato.HF@gmail.com" },
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.9.3",
    "fastapi>=0.129.0",
]

[project.scripts]
start = "agent.main:start"
agent = "agent.main:run"
run_crew = "agent.main:run"
train = "agent.main:train"
replay = "agent.main:replay"
test = "agent.main:test"
run_with_trigger = "agent.main:run_with_trigger"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
